.kubernetes-manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: culturedge
  labels:
    name: culturedge
