.kubernetes-manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: afilipovski/api-gateway:latest-amd64
          ports:
            - containerPort: 9090

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedback
  template:
    metadata:
      labels:
        app: feedback
    spec:
      containers:
        - name: feedback
          image: afilipovski/feedback-microservice:latest-amd64
          ports:
            - containerPort: 1111

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photo
  template:
    metadata:
      labels:
        app: photo
    spec:
      containers:
        - name: photo
          image: afilipovski/photo-microservice:latest-amd64
          ports:
            - containerPort: 2222
          volumeMounts:
            - name: image-storage
              mountPath: /app/images
      volumes:
        - name: image-storage
          persistentVolumeClaim:
            claimName: image-storage-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heritage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heritage
  template:
    metadata:
      labels:
        app: heritage
    spec:
      containers:
        - name: heritage
          image: afilipovski/heritage-microservice:latest-amd64
          ports:
            - containerPort: 3333

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: culturedge-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: culturedge-front
  template:
    metadata:
      labels:
        app: culturedge-front
    spec:
      containers:
        - name: culturedge-front
          image: afilipovski/culturedge-front:latest-amd64
          ports:
            - containerPort: 80
