.kubernetes-manifests/services.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: culturedge
spec:
  ports:
    - port: 5432
  selector:
    app: db

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: culturedge
spec:
  ports:
    - port: 9090
  selector:
    app: backend

---
apiVersion: v1
kind: Service
metadata:
  name: feedback
  namespace: culturedge
spec:
  ports:
    - port: 1111
  selector:
    app: feedback

---
apiVersion: v1
kind: Service
metadata:
  name: photo
  namespace: culturedge
spec:
  ports:
    - port: 2222
  selector:
    app: photo

---
apiVersion: v1
kind: Service
metadata:
  name: heritage
  namespace: culturedge
spec:
  ports:
    - port: 3333
  selector:
    app: heritage

---
apiVersion: v1
kind: Service
metadata:
  name: culturedge-front
  namespace: culturedge
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080  # NodePort must be in the range 30000-32767
  selector:
    app: culturedge-front
