.kubernetes-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: culturedge.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: culturedge-front
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$1
spec:
  ingressClassName: nginx
  rules:
  - host: api.culturedge.com
    http:
      paths:
        - path: /(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: backend
              port:
                number: 9090
